objects/Payment_and_Quote_Term_Mapping__mdt/Payment_and_Quote_Term_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used by Billing Configurator. Store the Payment Term and Quote Term Mapping</description>
    <label>Payment and Quote Term Mapping</label>
    <pluralLabel>Payment and Quote Term Mappings</pluralLabel>
</CustomObject>