objects/Payment_and_Quote_Term_Mapping__mdt/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <description>Quote&apos;s Payment Term.</description>
    <label>Payment Term</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>