objects/Payment_and_Quote_Term_Mapping__mdt/fields/Quote_Term__c.field-meta.xml
<CustomField>
    <fullName>Quote_Term__c</fullName>
    <description>Quote term to use for the mapped payment term</description>
    <label>Quote Term</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>