objects/Payment_and_Quote_Term_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Billing</fullName>
            </value>
            <value>
                <fullName>Locked Dates</fullName>
            </value>
            <value>
                <fullName>Unlocked Dates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>